@@ -64,6 +64,23 @@ dependencies {
     testImplementation(libs.stefanBirkner.systemRules)
 }
 
+application {
+    mainClass = 'com.hivemq.HiveMQServer'
+    applicationDefaultJvmArgs = ['-Xmx2G', '-Xms2G', '-server', '-Dfile.encoding=UTF-8',
+                                 '--add-opens',
+                                 'java.base/java.lang=ALL-UNNAMED',
+                                 '--add-opens',
+                                 'java.base/java.nio=ALL-UNNAMED',
+                                 '--add-opens',
+                                 'java.base/sun.nio.ch=ALL-UNNAMED',
+                                 '--add-opens',
+                                 'jdk.management/com.sun.management.internal=ALL-UNNAMED',
+                                 '--add-exports',
+                                 'java.base/jdk.internal.misc=ALL-UNNAMED',
+                                 '-Djava.net.preferIPv4Stack=true',
+                                 '-Dcom.sun.management.jmxremote', '-Dcom.sun.management.jmxremote.port=9010', '-Dcom.sun.management.jmxremote.local.only=false', '-Dcom.sun.management.jmxremote.authenticate=false', '-Dcom.sun.management.jmxremote.ssl=false', '-noverify']
+}
+
 wrapper {
     gradleVersion = '8.10.2'
 }
